# openbookqa-dspy

./: .env.example  .gitignore  README.md  pyproject.toml  questions.json
.windsurf/rules/: rules.md
evaluation_results/: 20250828_170940_mipro-200.json  20250828_171041_baseline-200.json  20250908_101608_mipro-200.json
models/: openai-gpt-4o-mini_miprov2.json
src/openbookqa_dspy/: __init__.py  agent.py  cli.py  config.py  data.py  eval.py  lm.py  web.py
src/openbookqa_dspy/modules/: __init__.py  baseline.py  generator.py  mipro.py  signature.py
src/openbookqa_dspy/templates/: questions.html  results.html
tests/: test_smoke.py
